Update .env.example with safe placeholder values
Updated example Instagram bot credentials for local development.

--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,12 @@
 # CRITICAL: Set these in Render/Vercel environment variables, NOT in this file
 # This file is for LOCAL development reference only
 
-IG_BOT_USER=rock.ingman2004
-IG_BOT_PASS=Kkk123@#
+IG_BOT_USER=your_instagram_username
+IG_BOT_PASS=your_instagram_password
 
 # Optional: Flask Environment
 FLASK_ENV=production
 
 # Session File Location (auto-generated)
 # Session files persist login state to avoid repeated authentication
-IG_SESSION_FILE=./rock.ingman2004.session
+IG_SESSION_FILE=./your_username.session
