--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://igosint-3r8r.onrender.com/api/:path**"    }
+      "destination": "https://igosint-3r8r.onrender.com/api/:path*"    }
   ],
   "headers": [
     {
